GNOME Bugzilla – Bug 765036
backend: Fix the build with -Werror=format
Last modified: 2016-06-08 10:56:35 UTC
On F24 i686 builders totem 3.20.1 fails to build with: bacon-video-widget.c: In function 'bvw_handle_toc_message': bacon-video-widget.c:2337:18: error: format '%li' expects argument of type 'long int', but argument 9 has type 'gint64 {aka long long int}' [-Werror=format=] GST_DEBUG ("Chapter #%d (start: %li stop: %li)", i, start, stop); ^ /usr/include/gstreamer-1.0/gst/gstinfo.h:546:31: note: in definition of macro 'GST_CAT_LEVEL_LOG' (GObject *) (object), __VA_ARGS__); \ ^~~~~~~~~~~ bacon-video-widget.c:2337:7: note: in expansion of macro 'GST_DEBUG' GST_DEBUG ("Chapter #%d (start: %li stop: %li)", i, start, stop); ^ bacon-video-widget.c:2337:18: error: format '%li' expects argument of type 'long int', but argument 10 has type 'gint64 {aka long long int}' [-Werror=format=] GST_DEBUG ("Chapter #%d (start: %li stop: %li)", i, start, stop); ^ /usr/include/gstreamer-1.0/gst/gstinfo.h:546:31: note: in definition of macro 'GST_CAT_LEVEL_LOG' (GObject *) (object), __VA_ARGS__); \ ^~~~~~~~~~~ bacon-video-widget.c:2337:7: note: in expansion of macro 'GST_DEBUG' GST_DEBUG ("Chapter #%d (start: %li stop: %li)", i, start, stop);
Created attachment 325984 [details] [review] backend: Fix the build with -Werror=format
Review of attachment 325984 [details] [review]: Great.
Attachment 325984 [details] pushed as 057590c - backend: Fix the build with -Werror=format
*** Bug 767374 has been marked as a duplicate of this bug. ***