backend: Fix the build with -Werror=format

https://bugzilla.gnome.org/show_bug.cgi?id=765036